objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Amendment_Version_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amendment Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName + &quot; &quot; + Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Amendment_Opportunity_SubType__c</fullName>
        <description>In order enable Amend functionality on contract, Please update the field to either Expansion or Change Order.</description>
        <inlineHelpText>In order enable Amend functionality on contract, Please update the field to either Expansion or Change Order.</inlineHelpText>
        <label>Amendment Opportunity SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Recontracting</fullName>
                </value>
                <value>
                    <fullName>Contract Path Change</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Expansion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_AutoRenew__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defaulted to  &quot;True&quot;. Uncheck anytime before auto renew trigger date (60 days before Original Contract end date).</description>
        <inlineHelpText>Contract is identified as Autorenewal.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Business_Region__c</fullName>
        <description>Value of Quote Business Region.</description>
        <formula>SBQQ__Quote__r.L2O_Business_Region__c</formula>
        <label>Business Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Channel_Segment__c</fullName>
        <label>Channel Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Client Management</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System (HHS)</fullName>
                </value>
                <value>
                    <fullName>Partner (Broker)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Broker)</label>
                </value>
                <value>
                    <fullName>Partner (Consultant)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Consultant)</label>
                </value>
                <value>
                    <fullName>Partner (Reseller)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Reseller)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Client_Line_of_Business__c</fullName>
        <description>Twin field from Contract to Renewal Opportunity</description>
        <label>Client Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path_Sub_type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path_Sub_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path__c</fullName>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Remaining_Days__c</fullName>
        <formula>EndDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Customer_Number__c</fullName>
        <formula>Account.L2O_customer_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_DirectEmployerBusiness__c</fullName>
        <label>Direct Employer Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_DirectTDHContract__c</fullName>
        <label>Direct TDH Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Direct_Employer_Business__c</fullName>
        <label>Direct Employer Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Direct_TDH_Contract__c</fullName>
        <label>Direct TDH Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Healthplan_Subtype__c</fullName>
        <label>Healthplan Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>US Health Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Contract_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Lessor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the Lessor account from opportunity. (CON-177035)</description>
        <label>Lessor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Lessor Account)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Plan_Administration__c</fullName>
        <label>Plan Administration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ASO – 100% AND $0 Copay</fullName>
                </value>
                <value>
                    <fullName>ASO – 100% or $0 Copay</fullName>
                </value>
                <value>
                    <fullName>ASO - Baseline</fullName>
                </value>
                <value>
                    <fullName>ASO - Custom</fullName>
                </value>
                <value>
                    <fullName>ASO - Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>ASO - Full Marketing</fullName>
                </value>
                <value>
                    <fullName>ASO - Opt In</fullName>
                </value>
                <value>
                    <fullName>ASO - Opt Out</fullName>
                </value>
                <value>
                    <fullName>ASO - Standard Communications</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Fully Insured and Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Connect 360</fullName>
                </value>
                <value>
                    <fullName>HTN Bundle</fullName>
                </value>
                <value>
                    <fullName>Marketplace/Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Multi-Year</fullName>
                </value>
                <value>
                    <fullName>NY ASO</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard w/ Coaching</fullName>
                </value>
                <value>
                    <fullName>Standard w/ Upfront Fee</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>ASO - Baseline	ASO - Baseline</fullName>
                    <isActive>false</isActive>
                    <label>ASO - Baseline	ASO - Baseline</label>
                </value>
                <value>
                    <fullName>ASO - Custom	ASO - Custom</fullName>
                    <isActive>false</isActive>
                    <label>ASO - Custom	ASO - Custom</label>
                </value>
                <value>
                    <fullName>ASO - Digital Marketing	ASO - Digital Marketing</fullName>
                    <isActive>false</isActive>
                    <label>ASO - Digital Marketing	ASO - Digital Marketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Prior_ARR_value__c</fullName>
        <label>Prior ARR value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Bookings_Total_Value__c</fullName>
        <label>Prior Bookings Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_First_Year_Revenue__c</fullName>
        <label>Prior Est First Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_In_Year_Revenue__c</fullName>
        <label>Prior Est. In Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_One_Time_Revenue__c</fullName>
        <label>Prior Est. One Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Net_ARR__c</fullName>
        <label>Prior Net ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Net_ARR_w_PG__c</fullName>
        <label>Prior Net ARR w/ PG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_TCV_Value__c</fullName>
        <label>Prior TCV Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Sub_Channel_Segment__c</fullName>
        <label>Sub-Channel Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>B2H</fullName>
                </value>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Downmarket</fullName>
                </value>
                <value>
                    <fullName>DTE - Client Management</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>East Client Sales</fullName>
                </value>
                <value>
                    <fullName>East Net New Sales</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System (HHS)</fullName>
                </value>
                <value>
                    <fullName>HSG</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>TPA/Reseller</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>West Client Sales</fullName>
                </value>
                <value>
                    <fullName>West Net New Sales</fullName>
                </value>
                <value>
                    <fullName>Net New</fullName>
                </value>
                <value>
                    <fullName>UHC Employees</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>&lt;No sub-type&gt;</fullName>
                    <isActive>false</isActive>
                    <label>&lt;No sub-type&gt;</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c), EndDate &gt;= TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                    <default>true</default>
                    <label>De-segmented</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>Price Book ID of the related opportunity or quote.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity__c)), SBQQ__Opportunity__r.Pricebook2Id, SBQQ__Quote__r.SBQQ__PricebookId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Book ID of the related opportunity or quote.</inlineHelpText>
        <label>Opportunity or Quote Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select the checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Legacy Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
</CustomObject>